src/test/deca/syntax/valid/test_parser_while.deca
// Description:
//    Minimalistic program to test while boucle.
//
// Results:
//    None
//
// History:
//    Created on 6/1/2025
{
    while(b)
    {
	print("a");
    }
}
