src/test/deca/syntax/invalid/provided/simple_lex.deca
// Description:
//    Tests for a lexically correct program.
//
// Results:
//    Line 11: Syntax error.
//    test_lex should not produce any error.
//
// History:
//    Created on 01/01/2025

idf _autre_idf
{
}
(
)
// un commentaire.
